Revert "bg position: fixed on mobile"
This reverts commit 8bc71c391d2d19a3e6d0c2629209c16241d2d62d.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,18 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#bg {
-  position: fixed;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: -10vh;
-  background-size: cover;
-  background-image: url(image-path("mt-hood.jpg"));
-}
-
 #cover {
+  background-size: cover;
   #cover-row {
     min-height: 100vh;
   }
